--- a/Mystyle.css
+++ b/Mystyle.css
@@ -143,3 +143,32 @@ nav ul li {
 	color: white;
 	font-family: 'Quicksand', sans-serif;
 }
+
+a{
+	text-decoration: none;
+}
+
+.log-in{
+
+	font-family: 'Quicksand', sans-serif;
+	font-weight: 500;
+	margin-top: 25px;
+	margin-right: 60px;
+	padding: 8px 18px;
+	background-color: transparent;
+	color: #ffff;
+	border: 0;
+	outline: none;
+	cursor: pointer;
+	border-radius: 10px;
+	border: 3px solid black;
+	transition: 0.2s;
+}
+
+a{
+	color: #ffff;
+}
+
+.log-in:hover{
+	background-color: rgb(103, 102, 102);
+}
