--- a/Mystyle.css
+++ b/Mystyle.css
@@ -172,3 +172,131 @@ a{
 .log-in:hover{
 	background-color: rgb(103, 102, 102);
 }
+
+
+footer {
+	background-color: black;
+	min-width: 300px;
+	width: 100%;
+	bottom: 0px;
+	display: block;
+	align-items: center;
+	flex-direction: column;
+  }
+  
+  .footer-wrapper {
+	display: flex;
+	background: black;
+	flex-direction: column;
+	max-width: 1320px;
+	padding: 16px;
+  }
+  
+  .footer-line {
+	display: block;
+	width: 100%;
+	height: 6px;
+	background: linear-gradient(90deg, #5da8ff,
+			#605dff 50%, #ad63f6);
+  }
+  
+  .footer-columns {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: start;
+	align-items: start;
+	flex: 2 0 140px;
+	width: 100%;
+	gap: 16px;
+	padding: 24px 8px 16px 8px;
+	margin: 0 auto;
+  }
+  
+  .footer-columns ul {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+  }
+  
+  .footer-columns ul a {
+	color: white;
+	text-decoration: none;
+  }
+  
+  .footer-columns ul a:hover {
+	text-decoration: underline;
+  }
+  
+  .Location a:hover {
+	text-decoration: underline;
+  }
+  
+  .footer-columns ul li {
+	margin-bottom: 16px;
+  }
+  
+  .footer-columns h3 {
+	color: white;
+	margin-top: 0;
+	margin-bottom: 20px;
+	font-size: 23px;
+  }
+  
+  .footer-columns>section {
+	min-width: 225px;
+  }
+  
+  .Location p{
+	color: white;
+  }
+  .Location a{
+	color: white;
+  }
+  
+  .Location{
+	max-width: 30px;
+  }
+  
+  .footer-logo>svg {
+	stroke: white;
+	stroke-width: 8px;
+	width: 50px;
+  }
+  
+  .footer-bottom {
+	text-align: center;
+	border-top: 1px solid white;
+	margin-top: 48px;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	gap: 8px;
+	padding: 16px 0px;
+	flex-wrap: wrap;
+	justify-content: space-between;
+  }
+  
+  .footer-bottom>small {
+	font-size: 16px;
+	margin: 0 4px;
+	color: white;
+  }
+  
+  
+  .social-links {
+	display: flex;
+	flex-direction: row;
+	gap: 12px;
+  }
+  
+  .social-links img {
+	width: 35px;
+	height: 24px;
+	transition: all 0.2s ease-in-out;
+	color: #ffffff;
+  }
+  
+  .social-links img:hover {
+	transform: scale(1.5);
+  }
