--- a/Mystyle.css
+++ b/Mystyle.css
@@ -43,8 +43,9 @@ nav .logo h1 span {
 nav ul {
 	display: flex;
 	align-items: center;
-	width: 60%;
-	height: 90px;
+	margin-top: 10px;
+	margin-right: 60px;
+	padding: -10px 18px;
 }
 .membership-info {
     color: #f2f2f2;
@@ -90,10 +91,10 @@ nav ul {
 nav ul a {
 	color: white;
 	list-style-type: none;
-	padding: 0.9rem 1.4rem;
-	margin: 0.3px;
+	padding: o.9rem -1.4rem 0rem -1.4rem;
+	margin: 20px;
 	text-decoration: none;
-	font-size: 14px;
+	font-size: 20px;
 	font-family: 'Quicksand', sans-serif;
 }
 
