--- a/Membership.css
+++ b/Membership.css
@@ -108,7 +108,7 @@ nav ul li{
     table {
         width: 100%;
         border:none;
-        background-color: #000000;
+        background-color: #1b1b1b;
         color: #ddd;
         padding-left: 300px;
         padding-right: 200px;
@@ -117,11 +117,13 @@ nav ul li{
       th, td {
         padding-left: 100px;
         padding-right: 100px;
+        padding-top: 15px;
+        padding-bottom: 30px;
         text-align:center;
       }
     
       th {
-        background-color: #000000;
+        background-color: #1b1b1b;
       }
       .title{
         font-size: 39px;
@@ -149,11 +151,19 @@ nav ul li{
         }
         
         .footer-line {
+          padding-top: 40px;
         display: block;
         width: 100%;
         height: 6px;
-        background: linear-gradient(90deg, #5da8ff,
-            #605dff 50%, #ad63f6);
+        background: linear-gradient(90deg,background-color:#000000;);
+        }
+
+        .footer-line2 {
+          display: block;
+          width: 100%;
+          height: 6px;
+          background: linear-gradient(90deg, #5da8ff,
+                  #605dff 50%, #ad63f6);
         }
         
         .footer-columns {
