--- a/Membership.css
+++ b/Membership.css
@@ -42,19 +42,20 @@ nav .logo h1 span{
 color:#ec4141;
 margin-left:5	px;
 }	
-nav ul{
-display:flex;
-align-items:center;
-width:60%;
-height:90px;
+nav ul {
+	display: flex;
+	align-items: center;
+	margin-top: 10px;
+	margin-right: 60px;
+	padding: -10px 18px;
 }	
-nav ul a{
-	color:white;
-	list-style-type:none;
-	padding:0.9rem 1.4rem;
-	margin:0.3px;
-	text-decoration:none;
-	font-size:14px;
+nav ul a {
+	color: white;
+	list-style-type: none;
+	padding: o.9rem -1.4rem 0rem -1.4rem;
+	margin: 20px;
+	text-decoration: none;
+	font-size: 20px;
 	font-family: 'Quicksand', sans-serif;
 }
 nav ul a:hover{
