--- a/Contacts.css
+++ b/Contacts.css
@@ -351,3 +351,57 @@ footer {
   .social-links img:hover {
 	transform: scale(1.5);
   }
+  .log-in{
+
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    margin-top: 25px;
+    margin-right: 60px;
+    padding: 8px 18px;
+    background-color: transparent;
+    color: #ffff;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    border-radius: 10px;
+    border: 3px solid black;
+    transition: 0.2s;
+  }
+  
+  a{
+    color: #ffff;
+    text-decoration: none;
+  }
+  
+  .log-in:hover{
+    background-color: rgb(103, 102, 102);
+  }
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    }
+    
+    .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #000000;
+    min-width: 160px;
+    min-height: 30px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 15px;
+    }
+    
+    .dropdown-content a {
+    color: rgb(246, 244, 244);
+    padding: 1px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: small;
+    }
+    .dropdown-content a:hover {background-color: #000000;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
