--- a/Membership.css
+++ b/Membership.css
@@ -166,7 +166,7 @@ nav ul li{
         display: block;
         width: 100%;
         height: 6px;
-        background: linear-gradient(90deg,background-color:#000000;);
+        background: linear-gradient(90deg, background-color=#000000);
         }
 
         .footer-line2 {
